name: pennyTest
version: 0.1.0.0
Cabal-version: >=1.8
Build-Type: Simple
License: MIT
Copyright: 2012 Omari Norman.
author: Omari Norman
maintainer: omari@smileystation.com
stability: Experimental
homepage: http://www.github.com/massysett/penny
bug-reports: omari@smileystation.com
Category: Console
License-File: LICENSE
synopsis: Tests for Penny

description: All tests for Penny are housed in this package.

Library
  hs-source-dirs: lib
  Build-depends:
    base ==4.*,
    containers ==0.4.*,
    Decimal >= 0.2.2 && < 0.3,
    explicit-exception ==0.1.*,
    old-locale ==1.0.*,
    parsec >= 3.1.2 && < 3.2,
    penny ==0.1.*,
    pretty ==1.0.*,
    random ==1.0.*,
    random-shuffle ==0.0.3,
    semigroups ==0.8.*,
    QuickCheck ==2.4.*,
    test-framework ==0.5.*,
    test-framework-quickcheck2 ==0.2.*,
    text ==0.11.*,
    time ==1.2.*


  GHC-Options: -Wall -fno-warn-orphans
  Exposed-modules:
    PennyTest,
    PennyTest.Pretty,
    PennyTest.Copper,
    PennyTest.Copper.Account,
    PennyTest.Copper.Amount,
    PennyTest.Copper.Comments,
    PennyTest.Copper.Commodity,
    PennyTest.Copper.DateTime,
    PennyTest.Copper.Qty,
    PennyTest.Copper.Util,
    PennyTest.Lincoln,
    PennyTest.Lincoln.Balance,
    PennyTest.Lincoln.Bits,
    PennyTest.Lincoln.Family,
    PennyTest.Lincoln.Family.Child,
    PennyTest.Lincoln.Family.Family,
    PennyTest.Lincoln.Family.Siblings,
    PennyTest.Lincoln.Meta,
    PennyTest.Lincoln.Transaction,
    PennyTest.Lincoln.Transaction.Unverified,
    PennyTest.Lincoln.TextNonEmpty

Executable pennyTestSuite
  hs-source-dirs: bin
  main-is: TestSuite.hs
  Build-depends:
    base ==4.*,
    pennyTest ==0.1.*,
    test-framework ==0.5.*

  GHC-Options: -Wall

Executable copperTest
  hs-source-dirs: bin
  Build-depends:
    base ==4.*,
    text ==0.11.*,
    time ==1.2.*,
    parsec >=3.1.2 && < 3.2,
    penny ==0.1.*,
    pretty ==1.0.*,
    pennyTest ==0.1.*

  Main-is: copperTest.hs
  GHC-Options: -Wall


