name: penny-test-lib
version: 0.1.0.0
Cabal-version: >=1.8
Build-Type: Simple
License: MIT
Copyright: 2012 Omari Norman.
author: Omari Norman
maintainer: omari@smileystation.com
stability: Experimental
homepage: http://www.github.com/massysett/penny
bug-reports: omari@smileystation.com
Category: Console, Finance
License-File: LICENSE
synopsis: Tests for Penny

description: The test library for Penny is housed in this
             package. Test executables are in a separate package.

Library
  Build-depends:
    base ==4.*,
    containers ==0.4.*,
    Decimal >= 0.2.2 && < 0.3,
    explicit-exception ==0.1.*,
    old-locale ==1.0.*,
    parsec >= 3.1.2 && < 3.2,
    penny-lib ==0.1.*,
    pretty ==1.0.*,
    random ==1.0.*,
    random-shuffle ==0.0.3,
    semigroups ==0.8.*,
    QuickCheck ==2.4.*,
    test-framework ==0.5.*,
    test-framework-quickcheck2 ==0.2.*,
    text ==0.11.*,
    time ==1.2.*

  GHC-Options: -Wall
  Exposed-modules:
    PennyTest,
    PennyTest.Pretty,
    PennyTest.Copper,
    PennyTest.Copper.Account,
    PennyTest.Copper.Amount,
    PennyTest.Copper.Comments,
    PennyTest.Copper.Commodity,
    PennyTest.Copper.DateTime,
    PennyTest.Copper.Entry,
    PennyTest.Copper.Flag,
    PennyTest.Copper.Item,
    PennyTest.Copper.Memos,
    PennyTest.Copper.Memos.Posting,
    PennyTest.Copper.Memos.Transaction,
    PennyTest.Copper.Number,
    PennyTest.Copper.Payees,
    PennyTest.Copper.Posting,
    PennyTest.Copper.Transaction,
    PennyTest.Copper.Price,
    PennyTest.Copper.Qty,
    PennyTest.Copper.Tags,
    PennyTest.Copper.TopLine,
    PennyTest.Copper.Util,
    PennyTest.Lincoln,
    PennyTest.Lincoln.Balance,
    PennyTest.Lincoln.Bits,
    PennyTest.Lincoln.Family,
    PennyTest.Lincoln.Family.Family,
    PennyTest.Lincoln.Family.Siblings,
    PennyTest.Lincoln.Meta,
    PennyTest.Lincoln.Transaction,
    PennyTest.Lincoln.Transaction.Unverified,
    PennyTest.Lincoln.TextNonEmpty
